# promptfoo-llm-quality-gate

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  promptfooconfig.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: app_config.yaml
config/promptfoo/: defaults.yaml  providers.yaml
config/promptfoo/evaluations/: 01_model_comparison.yaml  02_rag_retriever.yaml  03_rag_context.yaml  04_prompt_evaluation.yaml  04_rag_generation.yaml  05_prompt_evaluation.yaml  05_redteam.yaml  06_redteam.yaml  06_redteam_generated.yaml  redteam.yaml
prompts/experiments/: cot_prompt.txt  minimal_prompt.txt  standard_prompt.txt
prompts/rag/: generation_prompt.txt
prompts/redteam/: permissive_analyst.txt  strict_analyst.txt
prompts/system/: financial_analyst_v1.txt  financial_analyst_v2.txt
scripts/: ingest_documents.py  run_evaluations.sh
src/financial_rag/: __init__.py  config.py
src/financial_rag/embeddings/: embedder.py
src/financial_rag/processing/: __init__.py  document_processor.py
src/financial_rag/providers/: __init__.py  base_provider.py  chromadb_rag.py  generation_only.py  llm_factory.py  model_only.py  qdrant_rag.py  retriever_only.py
src/financial_rag/utils/: __init__.py  test_loader.py
src/financial_rag/vectorstores/: __init__.py  base_store.py  chroma_store.py  qdrant_store.py
tests/: __init__.py  conftest.py  test_config.py  test_providers.py
